# latents

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  noxfile.py  pyproject.toml
.claude/: settings.json
.claude/agents/documentation/: audit-comments.md  audit-docstring.md  audit-root-docs.md  audit-source-docs.md  audit-visual.md
.claude/agents/tests/: audit-tests.md
.claude/skills/documentation/: SKILL.md
.claude/skills/documentation/references/: check-codes.md  docstrings.md  inline-comments.md  root-docs.md  source-docs.md  terminology.md
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml
.github/ISSUE_TEMPLATE/: benchmark_request.yaml  bug_report.yaml  config.yml  documentation_improvement.yaml  feature_request.yaml  installation_issue.yaml  tests.yaml  tutorial_request.yaml
.github/workflows/: build.yml  cd.yml  ci.yml  claude-code-review.yml  docs.yml  pre-commit.yml  tests.yml
benchmarks/: __init__.py  cli.py  metrics.py  plotting.py  system_info.py
benchmarks/gallery/: README.rst
benchmarks/gallery/data/: system_info.json
benchmarks/gallery/data/gfa/dimensionality/: n_samples_snr.csv
benchmarks/gallery/data/gfa/recovery/: n_groups.csv  n_samples.csv  snr.csv  x_dim.csv  y_dim_per_group.csv
benchmarks/gallery/data/gfa/runtime/: n_groups.csv  n_samples.csv  x_dim.csv  y_dim_per_group.csv
benchmarks/gallery/gfa/: README.rst  plot_1_runtime.py  plot_2_recovery.py  plot_3_dimensionality.py
benchmarks/gfa/: __init__.py  cli.py  config.py  data.py  dimensionality.py  recovery.py  runtime.py
docs/source/: conf.py  index.md  index.rst  installation.md  installation.rst
docs/source/_static/: latents.css
docs/source/demo_gallery/: demo_gfa.ipynb  index.rst
docs/source/development/: architecture.md  benchmarks.md  contributing.md  index.md
docs/source/getting_started/: index.md
docs/source/reference/: base.rst  callbacks.rst  data.rst  gfa.rst  index.rst  tracking.rst
docs/source/reference/general_utilities/: base.rst  index.rst  plotting.rst
docs/source/reference/model_building_blocks/: index.rst
docs/source/reference/model_building_blocks/observation_model/: index.rst  observations.rst  probabilistic.rst
docs/source/reference/model_building_blocks/state_model/: index.rst  latents.rst
docs/source/reference/models/: index.rst
docs/source/reference/models/gfa/: analysis.rst  config.rst  gfa_config.rst  gfa_core.rst  gfa_data_types.rst  gfa_descriptive_stats.rst  gfa_simulation.rst  index.rst  inference.rst  model.rst  simulation.rst  tracking.rst
docs/source/reference/models/mdlag/: analysis.rst  config.rst  index.rst  inference.rst  mdlag_core.rst  mdlag_data_types.rst  mdlag_descriptive_stats.rst  mdlag_simulation.rst  model.rst  simulation.rst  tracking.rst
docs/source/reference/observation/: index.rst  posteriors.rst  priors.rst  realizations.rst
docs/source/reference/plotting/: hinton.rst  index.rst  observation.rst
docs/source/reference/state/: index.rst  posteriors.rst  priors.rst  realizations.rst
docs/source/user_guide/: gfa.md  gfa.rst  index.md  index.rst  mdlag.md  mdlag.rst
docs/source/user_guide/foundations/: index.md  mathematical_background.md  philosophy.md  reproducibility.md
docs/source/user_guide/methods/: gfa.md  index.md  mdlag.md
examples/: README.rst  gfa_demo.py  mdlag_demo.py
examples/gfa/: README.rst  plot_1_simulation.py  plot_2_fitting.py  plot_3_posteriors.py  plot_4_production.py
examples/mdlag/: README.rst
notebooks/: demo_gfa.ipynb  demo_mdlag.ipynb
src/latents/: __init__.py  _numerics.py  base.py  callbacks.py  data.py  plotting.py  tracking.py
src/latents/_core/: __init__.py  base.py  fitting.py  numerics.py
src/latents/_internal/: __init__.py  logging.py  numerics.py
src/latents/gfa/: __init__.py  analysis.py  config.py  core.py  data_types.py  descriptive_stats.py  inference.py  model.py  plotting.py  simulation.py  tracking.py
src/latents/mdlag/: __init__.py  analysis.py  config.py  core.py  data_types.py  descriptive_stats.py  inference.py  model.py  simulation.py  tracking.py
src/latents/mdlag/gp/: __init__.py  elbo.py  fit_config.py  fitting_config.py  gp_model.py  multigroup_params.py  optimize.py
src/latents/mdlag/gp/kernels/: __init__.py  base_kernel.py  multigroup_kernel.py
src/latents/mdlag/gp/kernels/rbf/: __init__.py  rbf_kernel.py  rbf_params.py
src/latents/observation/: __init__.py  posteriors.py  priors.py  realizations.py
src/latents/observation_model/: __init__.py  observations.py  probabilistic.py
src/latents/plotting/: __init__.py  hinton.py  latents.py  observation.py
src/latents/state/: __init__.py  posteriors.py  priors.py  realizations.py
src/latents/state_model/: GP_latents.py  __init__.py  gaussian_process.py  gaussian_process_delayed.py  latents.py
tests/: __init__.py  conftest.py  test_callbacks.py  test_data.py  test_imports.py
tests/test_benchmarks/: test_metrics.py
tests/test_benchmarks/test_gfa/: __init__.py  test_config.py  test_data.py
tests/test_gfa/: __init__.py  conftest.py  test_analysis.py  test_config.py  test_core.py  test_data_types.py  test_inference.py  test_model.py  test_simulation.py
tests/test_mdlag/: __init__.py  test_checkpointing.py  test_data_types.py  test_gradient_consistency.py  test_observation_inference.py  test_rbf_kernel.py  test_simulation.py
tests/test_observation/: __init__.py  test_posteriors.py  test_priors.py  test_realizations.py
tests/test_observation_model/: test_observations.py
tests/test_plotting/: __init__.py  conftest.py  test_hinton.py  test_observation.py
tests/test_state/: __init__.py  test_posteriors.py  test_priors.py  test_realizations.py
tests/test_state_model/: K_big.mat  test_GP_latents.py  test_latents.py
