[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools_scm>=8.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]     # Specify which directory to look for packages
namespaces = false  # Disable implicit namespaces

[project]
name = "latents"
description = "A toolkit for latent variable modeling and dimensionality reduction"
requires-python = ">=3.9"
dynamic = ["version"]
authors = [{ name="Evren Gokcen", email="egokcen@cmu.edu" }]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
keywords = [
    "dimensionality reduction",
    "latent variable model",
    "latent variables",
    "latents",
    "group factor analysis",
    "GFA",
    "delayed latents across groups",
    "DLAG",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "jsonpickle",
    "notebook",
    "pandas",
    "jax",
]

[project.urls]
GitHub = "https://github.com/egokcen/latents"

[project.optional-dependencies]
doc = [
    "sphinx",
    "sphinx-autobuild",
    "sphinx-design",
    "myst_parser",
    "nbsphinx",
    "pydata-sphinx-theme",
]
dev = [
    "pre-commit",
    "ruff",
    "pytest",
    "pytest-cov",
    "build",
    "twine",
]

[tool.setuptools_scm]
version_file = "src/latents/_version.py"

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "EM",   # flake8-errmsg
    "FA",   # flake8-future-annotations
    "ISC",  # flake8-implicit-str-concat
    "PT",   # flake8-pytest-style"
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "FIX",  # flake8-fixme
    "ERA",  # eradicate (commented-out code)
    "NPY",  # NumPy-specific rules
    "RUF",  # Ruff-specific rules
]
ignore = [
    "D105",   # Missing docstring in magic method
    "ISC001", # Implicitly concatenated strings on a single line
    "RUF012", # Mutable class attributes should be annotated with typing.ClassVar
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]  # Unused import
"tests/*" = ["I001"]        # Import block is un-sorted or un-formatted
"*.ipynb" = ["I001"]        # Import block is un-sorted or un-formatted

[tool.ruff.lint.pydocstyle]
convention = "numpy"