[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "latents"
description = "A toolkit for latent variable modeling and dimensionality reduction"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dynamic = ["version"]
authors = [{ name = "Evren Gokcen", email = "egokcen@cmu.edu" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
keywords = [
    "dimensionality reduction",
    "latent variable model",
    "latent variables",
    "latents",
    "group factor analysis",
    "GFA",
    "delayed latents across groups",
    "DLAG",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "safetensors",
    "tqdm",
    "typing_extensions>=4.0; python_version < '3.11'",
]

[project.optional-dependencies]
# User-facing extras only
notebook = [
    "jupyter",
    "ipywidgets",
]

[project.urls]
Homepage = "https://github.com/egokcen/latents"
Documentation = "https://latents.readthedocs.io"
Repository = "https://github.com/egokcen/latents"
Changelog = "https://github.com/egokcen/latents/blob/main/CHANGELOG.md"

# PEP 735 Dependency Groups (dev dependencies, not user-facing)
[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
]
test = [
    "pytest",
    "pytest-cov",
    "coverage[toml]",
]
doc = [
    "autodocsumm",
    "myst-parser",
    "numpydoc",
    "pillow",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-design",
    "sphinx-gallery",
    "sphinxcontrib-mermaid",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/latents/_version.py"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/latents"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear (added)
    "C4",     # flake8-comprehensions (added)
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "EM",     # flake8-errmsg
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "FIX",    # flake8-fixme
    "NPY",    # NumPy-specific rules
    "RUF",    # Ruff-specific rules
]
ignore = [
    "D105",   # Missing docstring in magic method
    "ISC001", # Implicitly concatenated strings on a single line
    "RUF012", # Mutable class attributes should be annotated with typing.ClassVar
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]  # Unused import
"tests/*" = ["I001"]        # Import block is un-sorted or un-formatted
"*.ipynb" = ["I001"]        # Import block is un-sorted or un-formatted
"examples/*" = ["D100", "D103", "D205", "D400", "D415", "I001"]  # sphinx-gallery scripts
"src/latents/callbacks.py" = ["D102", "ARG002"]  # Callback interface methods
"tests/test_callbacks.py" = ["ARG002"]  # Callback interface methods in tests

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["latents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=latents",
    "--cov-report=xml",
    "--cov-report=term-missing",
    "-v",
]

[tool.coverage.run]
source = ["src/latents"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
